# schedule-app

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.override.yml  init.sh
config/: urls.py
config/settings/: base.py  circleci.py  dev.py  local.py  prod.py
dockerfiles/devcontainer/: Dockerfile
dockerfiles/local/: Dockerfile
dockerfiles/render/: Dockerfile
schedule/templates/: index.html
