[tool.poetry]
name = "six1_template"
version = "0.1.0"
description = "six1_template"
authors = ["Six1 Co., Ltd."]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Django = "^4.2.6"
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.2.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
psycopg = { extras = ["binary", "pool"], version = "^3.1.10" }

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
ruff = "^0.1.0"
djlint = "^1.34.0"
django-extensions = "^3.2.3"
werkzeug = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"

[tool.black]
target-version = ["py39"]
line-length = 88
extend-exclude = '''
(
    migrations
    | .git
    | __pycache__
)
'''

[tool.ruff]
extend-exclude = ["**/migrations/*", "__pycache__"]